--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Welcome to my portfolio! I’m Allan Chimangah, a data analyst and software developer with expertise in Python, SQL, and data visualization. Here are some of the projects I've worked on.</p>
+        <p>Welcome to my portfolio! I’m Allan Chimangah, a data analyst with expertise in Python, SQL, and data visualization. Here are some of the projects I've worked on.</p>
     </section>
 
     <section id="projects">
